2004-07-20  Sven Neumann  <sven@gimp.org>
	* plug-ins/gimpressionist/Makefile.am (gimpressionist_sources):
	added paper.h.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14077 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/plug-ins/gimpressionist/Makefile.am
+++ b/plug-ins/gimpressionist/Makefile.am
@@ -37,10 +37,11 @@ gimpressionist_sources = \
 	gimpressionist.c	\
 	gimpressionist.h	\
 	globals.c		\
-	infile.h        \
+	infile.h        	\
 	orientation.c		\
 	orientmap.c		\
 	paper.c			\
+	paper.h			\
 	placement.c		\
 	placement.h		\
 	plasma.c		\
@@ -50,9 +51,9 @@ gimpressionist_sources = \
 	presets.h		\
 	preview.c		\
 	preview.h		\
-	random.h        \
+	random.h        	\
 	repaint.c		\
-	size.h          \
+	size.h          	\
 	size.c			\
 	sizemap.c		\
 	utils.c
