2004-07-22  Sven Neumann  <sven@gimp.org>
	* app/core/Makefile.am
	* app/core/gimpgradient-load.[ch]
	* app/core/gimpgradient-save.[ch]
	* app/core/gimpgradient.[ch]: moved gradient file handling out of
	gimpgradient.c to new files.

	* app/core/gimp.c
	* app/actions/gradients-commands.c: changed accordingly.

	* libgimpcolor/gimpcolor.def: added gimp_rgb_parse_name.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14118 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/core/Makefile.am
+++ b/app/core/Makefile.am
@@ -101,6 +101,10 @@ libappcore_a_sources = \
 	gimpenvirontable.c		\
 	gimpgradient.c			\
 	gimpgradient.h			\
+	gimpgradient-load.c		\
+	gimpgradient-load.h		\
+	gimpgradient-save.c		\
+	gimpgradient-save.h		\
 	gimpgrid.c                      \
 	gimpgrid.h                      \
 	gimpimage.c			\
