2004-07-22  Sven Neumann  <sven@gimp.org>
	* libgimpcolor/Makefile.am
	* libgimpcolor/gimprgb-parse.c
	* libgimpcolor/gimprgb.[ch]: added more RGB parsers and moved the
	code to a dedicated file.

	* libgimpcolor/gimpcolor.def: added new symbols.

	* libgimpwidgets/gimpcolorscales.c: use gimp_rgb_parse_hex().


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14120 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/libgimpcolor/Makefile.am
+++ b/libgimpcolor/Makefile.am
@@ -75,7 +75,8 @@ libgimpcolor_2_0_la_SOURCES = \
 	gimphsv.c			\
 	gimphsv.h			\
 	gimprgb.c			\
-	gimprgb.h
+	gimprgb.h			\
+	gimprgb-parse.c
 
 libgimpcolorinclude_HEADERS = \
 	gimpcolor.h			\
