* plug-ins/gimpressionist/: created a header "orientation.h" for the Orientation tab specific declarations.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14132 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/plug-ins/gimpressionist/Makefile.am
+++ b/plug-ins/gimpressionist/Makefile.am
@@ -38,6 +38,7 @@ gimpressionist_sources = \
 	gimpressionist.h	\
 	globals.c		\
 	infile.h        	\
+	orientation.h       \
 	orientation.c		\
 	orientmap.c		\
 	paper.c			\
