* plug-ins/gimpressionist/: placed all the orientation map-related public functions in orientmap.h. Now we're freeing the PPM's that it is allocating by a call to orientation_map_free_resources().
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14150 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/plug-ins/gimpressionist/Makefile.am
+++ b/plug-ins/gimpressionist/Makefile.am
@@ -40,6 +40,7 @@ gimpressionist_sources = \
 	infile.h        	\
 	orientation.h		\
 	orientation.c		\
+	orientmap.h     \
 	orientmap.c		\
 	paper.c			\
 	paper.h			\
