2004-07-26  Sven Neumann  <sven@gimp.org>
	* libgimpcolor/gimprgb-parse.c
	* libgimpcolor/gimprgb.h: added new function gimp_rgb_list_names()
	that gives access to the list of SVG color keywords.

	* libgimpwidgets/Makefile.am
	* libgimpwidgets/gimpwidgets.h
	* libgimpwidgets/gimpwidgetstypes.h
	* libgimpwidgets/gimpcolorhexentry.[ch]: added new widget that
	allows to enter colors in hex notation or by using color names.

	* libgimpwidgets/gimpcolorscales.c: use a GimpColorHexEntry.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14151 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/libgimpwidgets/Makefile.am
+++ b/libgimpwidgets/Makefile.am
@@ -74,6 +74,8 @@ libgimpwidgets_2_0_la_sources = \
 	gimpcolordisplay.h	\
 	gimpcolordisplaystack.c	\
 	gimpcolordisplaystack.h	\
+	gimpcolorhexentry.c	\
+	gimpcolorhexentry.h	\
 	gimpcolornotebook.c	\
 	gimpcolornotebook.h	\
 	gimpcolorscale.c	\
