2004-07-26  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/Makefile.am
	* libgimpwidgets/gimpwidgets.def
	* libgimpwidgets/gimpwidgets.h
	* libgimpwidgets/gimpwidgetstypes.h
	* libgimpwidgets/gimpcellrenderercolor.[ch]: added a GimpRGB cell
	renderer.

	* libgimpwidgets/gimpcolorarea.[ch]: exported the function that
	renders the color to a buffer for internal use in libgimpwidgets.

	* libgimpwidgets/gimpcolorhexentry.c: use the new cell renderer
	for the completion popup.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14157 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/libgimpwidgets/Makefile.am
+++ b/libgimpwidgets/Makefile.am
@@ -64,6 +64,8 @@ libgimpwidgets_2_0_la_sources = \
 	gimpwidgetstypes.h	\
 	gimpbutton.c		\
 	gimpbutton.h		\
+	gimpcellrenderercolor.c	\
+	gimpcellrenderercolor.h	\
 	gimpchainbutton.c	\
 	gimpchainbutton.h	\
 	gimpcolorarea.c		\
