2004-07-26  Michael Natterer  <mitch@gimp.org>
	* app/pdb/procedural_db.[ch] (procedural_db_free_data): new
	function which clears the whole list of data set by plug-ins.

	(procedural_db_free): use it.

	* app/actions/plug-in-actions.c
	* app/actions/plug-in-commands.[ch]: added action, callback and
	confirmation dialog for "Reset all filters to default values".
	Somehow addresses bug #81015.

	* app/widgets/gimphelp-ids.h: added a help ID for the new action.

	* menus/image-menu.xml.in: added it to the "Filters" submenu.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14164 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/menus/image-menu.xml.in
+++ b/menus/image-menu.xml.in
@@ -432,6 +432,7 @@
     <menu action="plug-in-menu" name="Filters">
       <menuitem action="plug-in-repeat" />
       <menuitem action="plug-in-reshow" />
+      <menuitem action="plug-in-reset-all" />
       <separator />
       <menu action="plug-in-blur-menu" name="Blur" />
       <menu action="plug-in-colors-menu" name="Colors">
