2004-07-26  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/Makefile.am (libgimpwidgetsinclude_HEADERS):
	added new files.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14168 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/libgimpwidgets/Makefile.am
+++ b/libgimpwidgets/Makefile.am
@@ -148,11 +148,14 @@ libgimpwidgetsinclude_HEADERS = \
 	gimpwidgets.h		\
 	gimpwidgetstypes.h	\
 	gimpbutton.h		\
+	gimpcellrenderercolor.h	\
+	gimpcellrenderertoggle.h\
 	gimpchainbutton.h	\
 	gimpcolorarea.h		\
 	gimpcolorbutton.h	\
 	gimpcolordisplay.h	\
 	gimpcolordisplaystack.h	\
+	gimpcolorhexentry.h	\
 	gimpcolornotebook.h	\
 	gimpcolorscale.h	\
 	gimpcolorscales.h	\
