--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -40,6 +40,7 @@ app/actions/palettes-actions.c
 app/actions/palettes-commands.c
 app/actions/patterns-actions.c
 app/actions/plug-in-actions.c
+app/actions/plug-in-commands.c
 app/actions/qmask-actions.c
 app/actions/qmask-commands.c
 app/actions/select-actions.c
