2004-07-27  Michael Natterer  <mitch@gimp.org>
	* libgimp/Makefile.am
	* libgimp/gimp.h
	* libgimp/gimpui.h
	* libgimp/gimppalettemenu.[ch]
	* libgimp/gimppaletteselect.[ch]: added palette select wrapper and
	widget (straight copy & string replace of the font select stuff).
	Fixes bug #136130.

	* plug-ins/script-fu/script-fu-enums.h
	* plug-ins/script-fu/script-fu-scripts.c
	* plug-ins/script-fu/siod-wrapper.c: added SF_PALETTE so it can
	be used in scripts.

	* plug-ins/script-fu/scripts/test-sphere.scm: added a palette
	parameter to the test script.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14180 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/libgimp/Makefile.am
+++ b/libgimp/Makefile.am
@@ -175,6 +175,8 @@ libgimp_2_0_la_SOURCES = \
 	gimpimage.h		\
 	gimplayer.c		\
 	gimplayer.h		\
+	gimppaletteselect.c	\
+	gimppaletteselect.h	\
 	gimppatternselect.c	\
 	gimppatternselect.h	\
 	gimppixelfetcher.c	\
@@ -208,6 +210,8 @@ libgimpui_2_0_la_SOURCES = \
 	gimpfontmenu.h		\
 	gimpgradientmenu.c 	\
 	gimpgradientmenu.h 	\
+	gimppalettemenu.c	\
+	gimppalettemenu.h	\
 	gimppatternmenu.c	\
 	gimppatternmenu.h	\
 	gimpdrawablecombobox.c	\
@@ -232,6 +236,7 @@ gimpinclude_HEADERS = \
 	gimpgradientselect.h	\
 	gimpimage.h		\
 	gimplayer.h		\
+	gimppaletteselect.h	\
 	gimppatternselect.h	\
 	gimppixelfetcher.h	\
 	gimppixelrgn.h		\
@@ -247,6 +252,7 @@ gimpinclude_HEADERS = \
 	gimpbrushmenu.h		\
 	gimpfontmenu.h		\
 	gimpgradientmenu.h	\
+	gimppalettemenu.h	\
 	gimppatternmenu.h	\
 	gimppixbuf.h		\
 	gimpdrawablecombobox.h	\
