2004-07-27  Sven Neumann  <sven@gimp.org>
	* POTFILES.in: added libgimpbase/gimpmemsize.c.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14184 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-libgimp/POTFILES.in
+++ b/po-libgimp/POTFILES.in
@@ -9,6 +9,7 @@ libgimp/gimpmenu.c
 libgimp/gimppatternmenu.c
 libgimp/gimpunitcache.c
 
+libgimpbase/gimpmemsize.c
 libgimpbase/gimputils.c
 
 libgimpmodule/gimpmodule.c
