2004-07-27  Sven Neumann  <sven@gimp.org>
	* menus/image-menu.xml.in: commented out "Context" menu now that
	we have a shortcut editor.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14187 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/menus/image-menu.xml.in
+++ b/menus/image-menu.xml.in
@@ -33,6 +33,8 @@
       <menuitem action="file-quit" />
     </menu>
 
+<!-- Context
+
     <menu action="context-menu" name="Context">
       <menu action="context-colors-menu" name="Colors">
         <menuitem action="context-colors-default" />
@@ -104,6 +106,8 @@
         <menuitem action="context-font-select-next" />
       </menu>
     </menu>
+
+ -->
 
     <menu action="edit-menu" name="Edit">
       <placeholder name="Undo">
