2004-07-28  Sven Neumann  <sven@gimp.org>
	Applied a patch from Brion Vibber that makes the TWAIN plug-in
	available on Mac OS X (bug #147962):

	* configure.in
	* plug-ins/Makefile.am: check for Mac OS X twain support.

	* plug-ins/twain/Makefile.am
	* plug-ins/twain/tw_local.h
	* plug-ins/twain/tw_mac.c
	* plug-ins/twain/tw_platform.h
	* plug-ins/twain/tw_win.c: new files with platform specific code.

	* plug-ins/twain/README
	* plug-ins/twain/tw_dump.[ch]
	* plug-ins/twain/tw_func.[ch]
	* plug-ins/twain/tw_util.[ch]
	* plug-ins/twain/twain.c: changed accordingly.

	* plug-ins/twain/gimp-twain.png: twain application icon used by
	the Mac port.

	* plug-ins/twain/tw_sess.c: removed, doesn't seem to be used.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14202 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/configure.in
+++ b/configure.in
@@ -1324,6 +1324,21 @@ AC_SUBST(WINPRINT)
 AC_SUBST(WMF)
 
 
+############################################################
+# Check for Mac OS X TWAIN framework (can't build on Darwin)
+############################################################
+
+AC_MSG_CHECKING([checking for Mac OS X TWAIN support])
+AC_TRY_CPP([
+#include <Carbon/Carbon.h>
+#include <TWAIN/TWAIN.h>
+],
+twain_ok=yes,
+twain_ok=no)
+AC_MSG_RESULT($twain_ok)
+AM_CONDITIONAL(HAVE_MAC_TWAIN, test x$twain_ok = xyes)
+
+
 ##########################################################
 # Determine where to install the desktop & mime info files
 ##########################################################
