--- a/plug-ins/twain/Makefile.am
+++ b/plug-ins/twain/Makefile.am
@@ -6,11 +6,30 @@ libgimp = $(top_builddir)/libgimp/libgimp-$(GIMP_API_VERSION).la
 libgimpcolor = $(top_builddir)/libgimpcolor/libgimpcolor-$(GIMP_API_VERSION).la
 libgimpbase = $(top_builddir)/libgimpbase/libgimpbase-$(GIMP_API_VERSION).la
 
-twain_LDFLAGS = -mwindows
-
 libexecdir = $(gimpplugindir)/plug-ins
 
 libexec_PROGRAMS = twain
+
+
+if OS_WIN32
+twain_LDFLAGS = -mwindows
+winlink = -luser32
+
+twainplatform = tw_win.c
+endif
+
+
+if HAVE_MAC_TWAIN
+maclink = -framework Carbon -framework TWAIN
+
+twainplatform = tw_mac.c
+
+twaindatadir = $(gimpdatadir)/twain
+twaindata_DATA = gimp-twain.png
+endif
+
+
+AM_LDFLAGS = $(winlink) $(maclink)
 
 twain_SOURCES = \
 	tw_func.c	\
@@ -18,13 +37,19 @@ twain_SOURCES = \
 	tw_util.c	\
 	tw_util.h	\
 	twain.c		\
-	twain.h
+	twain.h		\
+	tw_local.h	\
+	tw_platform.h	\
+	$(twainplatform)
 
 EXTRA_DIST = \
 	README		\
+	gimp-twain.png	\
 	tw_dump.c	\
 	tw_dump.h	\
-	tw_sess.c
+	tw_sess.c	\
+	tw_win.c	\
+	tw_mac.c
 
 INCLUDES = \
 	-I$(top_srcdir)	\
@@ -38,4 +63,4 @@ LDADD = \
 	$(GLIB_LIBS)	\
 	$(RT_LIBS)	\
 	$(INTLLIBS)	\
-	-luser32
+	$(twain_LIBS)
