--- a/po-plug-ins/POTFILES.in
+++ b/po-plug-ins/POTFILES.in
@@ -48,6 +48,7 @@ plug-ins/common/destripe.c
 plug-ins/common/dicom.c
 plug-ins/common/diffraction.c
 plug-ins/common/displace.c
+plug-ins/common/dog.c
 plug-ins/common/edge.c
 plug-ins/common/emboss.c
 plug-ins/common/engrave.c
@@ -132,6 +133,7 @@ plug-ins/common/tileit.c
 plug-ins/common/tiler.c
 plug-ins/common/uniteditor.c
 plug-ins/common/unsharp.c
+plug-ins/common/url.c
 plug-ins/common/video.c
 plug-ins/common/vinvert.c
 plug-ins/common/vpropagate.c
@@ -153,14 +155,15 @@ plug-ins/faxg3/faxg3.c
 plug-ins/fits/fits.c
 plug-ins/flame/flame.c
 plug-ins/fp/fp.c
-plug-ins/gfig/gfig.c
 plug-ins/gfig/gfig-bezier.c
+plug-ins/gfig/gfig-dialog.c
 plug-ins/gfig/gfig-dobject.c
 plug-ins/gfig/gfig-grid.c
 plug-ins/gfig/gfig-poly.c
 plug-ins/gfig/gfig-preview.c
 plug-ins/gfig/gfig-spiral.c
 plug-ins/gfig/gfig-star.c
+plug-ins/gfig/gfig.c
 plug-ins/gflare/gflare.c
 plug-ins/gfli/gfli.c
 plug-ins/gimpressionist/brush.c
@@ -178,6 +181,7 @@ plug-ins/gimpressionist/preview.c
 plug-ins/gimpressionist/repaint.c
 plug-ins/gimpressionist/size.c
 plug-ins/gimpressionist/sizemap.c
+plug-ins/gimpressionist/utils.c
 plug-ins/help/domain.c
 plug-ins/helpbrowser/dialog.c
 plug-ins/helpbrowser/helpbrowser.c
@@ -214,7 +218,6 @@ plug-ins/imagemap/imap_cmd_select_region.c
 plug-ins/imagemap/imap_cmd_send_to_back.c
 plug-ins/imagemap/imap_cmd_unselect.c
 plug-ins/imagemap/imap_cmd_unselect_all.c
-plug-ins/imagemap/imap_default_dialog.c
 plug-ins/imagemap/imap_edit_area_info.c
 plug-ins/imagemap/imap_file.c
 plug-ins/imagemap/imap_grid.c
