--- a/po-libgimp/POTFILES.in
+++ b/po-libgimp/POTFILES.in
@@ -9,6 +9,7 @@ libgimp/gimpmenu.c
 libgimp/gimppatternmenu.c
 libgimp/gimpunitcache.c
 
+libgimpbase/gimpbaseenums.c
 libgimpbase/gimpmemsize.c
 libgimpbase/gimputils.c
 
