2004-07-29  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/Makefile.am
	* libgimpwidgets/gimpwidgets.def
	* libgimpwidgets/gimpwidgets.h
	* libgimpwidgets/gimpwidgetstypes.h
	* libgimpwidgets/gimppreviewarea.[ch]: added GimpPreviewArea, a
	replacement for GtkPreview, loosely based on patches from Geert
	Jordaens and David Odin. Fixes bug #144759.

	* plug-ins/common/sharpen.c: use the new widget instead of a
	GtkPreview; saves about 100 lines of rather complex code :)


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14226 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/libgimpwidgets/Makefile.am
+++ b/libgimpwidgets/Makefile.am
@@ -118,6 +118,8 @@ libgimpwidgets_2_0_la_sources = \
 	gimppickbutton.h	\
 	gimppixmap.c		\
 	gimppixmap.h		\
+	gimppreviewarea.c	\
+	gimppreviewarea.h	\
 	gimpquerybox.c		\
 	gimpquerybox.h		\
 	gimpsizeentry.c		\
@@ -175,6 +177,7 @@ libgimpwidgetsinclude_HEADERS = \
 	gimppatheditor.h	\
 	gimppickbutton.h	\
 	gimppixmap.h		\
+	gimppreviewarea.h	\
 	gimpquerybox.h		\
 	gimpsizeentry.h		\
 	gimpstock.h		\
