2004-07-29  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/gimppreviewarea.c: only invalidate the buffer
	on size_allocate; allocate a new one on the next call to
	gimp_preview_area_draw(). Fixed buffer offset in expose method.

	* libgimpwidgets/Makefile.am
	* libgimpwidgets/test-preview-area.c: more a benchmark than a
	test; quite similar to testrgb from the GTK+ source tree.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14230 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/libgimpwidgets/Makefile.am
+++ b/libgimpwidgets/Makefile.am
@@ -214,6 +214,25 @@ $(srcdir)/gimpwidgetsmarshal.c: $(srcdir)/gimpwidgetsmarshal.h
 	&& cp xgen-gwmc $(@F) \
 	&& rm -f xgen-gwmc xgen-gwmc~
 
+
+#
+# test programs, not to be built by default and never installed
+#
+
+noinst_PROGRAMS = test-preview-area
+
+test_preview_area_SOURCES = test-preview-area.c 
+
+test_preview_area_DEPENDENCIES = \
+	$(top_builddir)/libgimpbase/libgimpbase-$(GIMP_API_VERSION).la	\
+	$(top_builddir)/libgimpwidgets/libgimpwidgets-$(GIMP_API_VERSION).la
+
+test_preview_area_LDADD = \
+	$(GTK_LIBS) \
+	$(test_preview_area_DEPENDENCIES)
+
+
+
 install-data-local: install-ms-lib install-libtool-import-lib
 
 uninstall-local: uninstall-ms-lib uninstall-libtool-import-lib
