--- a/configure.in
+++ b/configure.in
@@ -1266,13 +1266,12 @@ fi
 # Check for perl
 ################
 
+AC_PATH_PROGS(PERL,perl5 perl perl5.005 perl5.004,perl)
+
+
 AC_ARG_WITH(pdbgen,
             [  --with-pdbgen           use 'pdbgen' code generation tool],,
   with_pdbgen=$enable_maintainer_mode)
-
-if test "x$with_pdbgen" = xyes ; then
-   AC_PATH_PROGS(PERL,perl5 perl perl5.005 perl5.004,perl)
-fi
 
 AM_CONDITIONAL(WITH_PDBGEN, test x$with_pdbgen = xyes)
 AM_CONDITIONAL(WITH_AUTHORSGEN, test x$enable_maintainer_mode = xyes)
@@ -1478,7 +1477,7 @@ AC_SUBST(GIMPINSTALL)
 AM_CONDITIONAL(STATICLIBS, test x$enable_static = xyes)
 
 dnl a tuned version of glib-mkenums
-GIMP_MKENUMS="\$(top_srcdir)/tools/gimp-mkenums"
+GIMP_MKENUMS="\$(PERL) \$(top_srcdir)/tools/gimp-mkenums"
 AC_SUBST(GIMP_MKENUMS)
 
 
