2004-07-30  Sven Neumann  <sven@gimp.org>
	Applied a bunch of small changes contributed by Tim Mooney that fix
	stack corruption on Tru64 and Aix (bug #129867).

	* app/Makefile.am
	* plug-ins/script-fu/Makefile.am: changed the dependency order so
	that $(REGEXREPL) is linked earlier.

	* regexrepl/regex.[ch]: fixed check for __STDC__, merged upstream
	fix for re_max_failures value.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14247 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/Makefile.am
+++ b/app/Makefile.am
@@ -125,6 +125,7 @@ gimp_2_1_LDADD = \
 	$(libgimpthumb)			\
 	$(libgimpmath)			\
 	$(libgimpbase)			\
+	$(REGEXREPL)			\
 	$(GTK_LIBS)			\
 	$(LIBART_LIBS)			\
 	$(PANGOFT2_LIBS)		\
@@ -133,8 +134,7 @@ gimp_2_1_LDADD = \
 	$(GIMP_THREAD_LIBS)		\
 	$(GIMP_MP_LIBS)			\
 	$(RT_LIBS)			\
-	$(INTLLIBS)			\
-	$(REGEXREPL)
+	$(INTLLIBS)
 
 
 if ENABLE_GIMP_CONSOLE
@@ -168,6 +168,7 @@ gimp_console_2_1_LDADD = \
 	$(libgimpthumb)			\
 	$(libgimpmath)			\
 	$(libgimpbase)			\
+	$(REGEXREPL)			\
 	$(GDK_PIXBUF_LIBS)		\
 	$(LIBART_LIBS)			\
 	$(PANGOFT2_LIBS)		\
@@ -176,8 +177,7 @@ gimp_console_2_1_LDADD = \
 	$(GIMP_THREAD_LIBS)		\
 	$(GIMP_MP_LIBS)			\
 	$(RT_LIBS)			\
-	$(INTLLIBS)			\
-	$(REGEXREPL)
+	$(INTLLIBS)
 
 endif
 
