2004-08-01  Simon Budig  <simon@gimp.org>
	* app/core/core-enums.h
	* app/core/gimpbrushgenerated.[ch]: Implement three different
	brush shapes for generated brushes.

	* app/core/gimpbrush.c: changed accordingly.
	* app/core/core-enums.c: regenerated.

	* app/widgets/gimpbrusheditor.[ch]: Add toggles for the shape.
	* themes/Default/images/stock-brush-generated-*-16.png: New stock
	icons for the brush shapes.

	* themes/Default/images/Makefile.am
	* libgimpwidgets/gimpstock.[ch]: changed accordingly

	untabified the files touched.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14267 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/themes/Default/images/Makefile.am
+++ b/themes/Default/images/Makefile.am
@@ -32,6 +32,9 @@ WILBER_VARIABLES = \
 ## Below are compiled in stock icons 
 
 STOCK_MENU_IMAGES = \
+	stock-brush-generated-circle-16.png		\
+	stock-brush-generated-diamond-16.png		\
+	stock-brush-generated-square-16.png		\
 	stock-cap-butt-16.png				\
 	stock-cap-round-16.png				\
 	stock-cap-square-16.png				\
