2004-08-01  Michael Schumacher <schumaml@cvs.gnome.org>
	* app/Makefile.am: added checks and rules to build and link the
	win32 icon resource if the resource compiler windres is found by
	configure. First part of a fix for bug #148443.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14271 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/Makefile.am
+++ b/app/Makefile.am
@@ -68,6 +68,10 @@ if OS_WIN32
 mwindows = -mwindows
 endif
 
+if HAVE_WINDRES
+GIMPICONRC = gimprc.o
+endif
+
 AM_CPPFLAGS = \
 	-DG_LOG_DOMAIN=\"Gimp\"		\
 	-DGIMP_APP_GLUE_COMPILATION	\
@@ -134,7 +138,8 @@ gimp_2_1_LDADD = \
 	$(GIMP_THREAD_LIBS)		\
 	$(GIMP_MP_LIBS)			\
 	$(RT_LIBS)			\
-	$(INTLLIBS)
+	$(INTLLIBS)			\
+	$(GIMPICONRC)
 
 
 if ENABLE_GIMP_CONSOLE
@@ -177,7 +182,8 @@ gimp_console_2_1_LDADD = \
 	$(GIMP_THREAD_LIBS)		\
 	$(GIMP_MP_LIBS)			\
 	$(RT_LIBS)			\
-	$(INTLLIBS)
+	$(INTLLIBS)			\
+	$(GIMPICONRC)
 
 endif
 
@@ -223,3 +229,6 @@ dist-dump-gimprc: gimp-console-$(GIMP_APP_VERSION)$(EXEEXT)
 
 
 dist-hook: dist-check-gimp-console dist-dump-gimprc
+
+gimprc.o:
+	$(WINDRES) gimp.rc gimprc.o
