2004-08-01  Michael Schumacher <schumaml@cvs.gnome.org>
	* configure.in: added checks for windres. Fixes bug #148443
	together will my last commit.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14272 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/configure.in
+++ b/configure.in
@@ -244,6 +244,9 @@ AM_CONDITIONAL(OS_UNIX, test "$os_win32" != "yes")
 
 if test "$os_win32" = "yes"; then
   AC_CHECK_PROG(ms_librarian, lib.exe, yes, no)
+  AC_CHECK_TOOL(WINDRES, windres, :)
+  AC_MSG_RESULT([$windres])  
+  AM_CONDITIONAL(HAVE_WINDRES, test "$windres" != ":")
 fi
 AM_CONDITIONAL(MS_LIB_AVAILABLE, test x$ms_librarian = xyes)
 
