--- a/configure.in
+++ b/configure.in
@@ -244,11 +244,11 @@ AM_CONDITIONAL(OS_UNIX, test "$os_win32" != "yes")
 
 if test "$os_win32" = "yes"; then
   AC_CHECK_PROG(ms_librarian, lib.exe, yes, no)
-  AC_CHECK_TOOL(WINDRES, windres, :)
+  AC_CHECK_TOOL(WINDRES, windres)
   AC_MSG_RESULT([$windres])
 fi
 AM_CONDITIONAL(MS_LIB_AVAILABLE, test x$ms_librarian = xyes)
-AM_CONDITIONAL(HAVE_WINDRES, test "$windres" != ":")
+AM_CONDITIONAL(HAVE_WINDRES, test "x$windres" != "x")
 
 ###############
 # Generic stuff
