2004-08-01  Manish Singh  <yosh@gimp.org>
        * configure.in: Really fix WINDRES logic.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14279 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/configure.in
+++ b/configure.in
@@ -244,11 +244,13 @@ AM_CONDITIONAL(OS_UNIX, test "$os_win32" != "yes")
 
 if test "$os_win32" = "yes"; then
   AC_CHECK_PROG(ms_librarian, lib.exe, yes, no)
-  AC_CHECK_TOOL(WINDRES, windres)
-  AC_MSG_RESULT([$windres])
+  AC_CHECK_TOOL(WINDRES, windres, :)
 fi
+
 AM_CONDITIONAL(MS_LIB_AVAILABLE, test x$ms_librarian = xyes)
-AM_CONDITIONAL(HAVE_WINDRES, test "x$windres" != "x")
+AM_CONDITIONAL(HAVE_WINDRES, test "x$windres" != "x:")
+
+AC_SUBST(WINDRES)
 
 ###############
 # Generic stuff
