2004-08-01  Manish Singh  <yosh@gimp.org>
        * configure.in: Really really fix WINDRES logic.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14280 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/configure.in
+++ b/configure.in
@@ -248,7 +248,7 @@ if test "$os_win32" = "yes"; then
 fi
 
 AM_CONDITIONAL(MS_LIB_AVAILABLE, test x$ms_librarian = xyes)
-AM_CONDITIONAL(HAVE_WINDRES, test "x$windres" != "x:")
+AM_CONDITIONAL(HAVE_WINDRES, test "x$WINDRES" != "x:")
 
 AC_SUBST(WINDRES)
 
